--- a/css/style.css
+++ b/css/style.css
@@ -230,10 +230,10 @@ footer {
           transform: translateZ( 250px );
 }
 #cube .back   {
-  -webkit-transform: rotateX( -180deg ) translateZ( 250px );
-     -moz-transform: rotateX( -180deg ) translateZ( 250px );
-       -o-transform: rotateX( -180deg ) translateZ( 250px );
-          transform: rotateX( -180deg ) translateZ( 250px );
+  -webkit-transform: rotateY( -180deg ) translateZ( 250px );
+     -moz-transform: rotateY( -180deg ) translateZ( 250px );
+       -o-transform: rotateY( -180deg ) translateZ( 250px );
+          transform: rotateY( -180deg ) translateZ( 250px );
 }
 #cube .right {
   -webkit-transform: rotateY(   90deg ) translateZ( 250px );
@@ -276,10 +276,10 @@ footer {
           transform: translateZ( -250px );
 }
 #cube.show-back {
-  -webkit-transform: translateZ( -250px ) rotateX( -180deg );
-     -moz-transform: translateZ( -250px ) rotateX( -180deg );
-       -o-transform: translateZ( -250px ) rotateX( -180deg );
-          transform: translateZ( -250px ) rotateX( -180deg );
+  -webkit-transform: translateZ( -250px ) rotateY( -180deg );
+     -moz-transform: translateZ( -250px ) rotateY( -180deg );
+       -o-transform: translateZ( -250px ) rotateY( -180deg );
+          transform: translateZ( -250px ) rotateY( -180deg );
 }
 #cube.show-right {
   -webkit-transform: translateZ( -250px ) rotateY(  -90deg );
