--- a/static/scss/page.scss
+++ b/static/scss/page.scss
@@ -1,99 +1,156 @@
 
 
-body {
+body, html {
 	height: 100%;
 	width: 100%;
 	background-color: #263238;
-	font-family: 'Roboto';
+	font-family: 'Roboto', sans-serif;
 	font-size: 14px;
+	position: relative;
 }
 
-button {
-	cursor: pointer;
-	font-weight: bold;
-	min-width: 100px;
-	height: 50px;
-	font-size: 14px;
-	transition: font-size 0.2s ease;
-}
-button:hover {
-	font-size: 16px;
-	transition: font-size 0.2s ease;
+
+
+/* Nav bar */
+
+$navheight: 50px;
+
+#nav-bar {
+	height: $navheight;
+	background: lightgrey;
+
+	#nav-controls {
+		height: 100%;
+		// padding: 10px 10px;
+
+		float: right;
+	}
+	span {
+		position: relative;
+		display: block;
+		float: left;
+		cursor: pointer;
+		font-weight: bold;
+		min-width: 100px;
+		// height: 100%;
+		font-size: 16px;
+		line-height: 16px;
+		padding: 10px 0;
+		margin: 0 10px;
+		transition: font-size 0.2s ease;
+	}
+	// span:hover {
+	// 	font-size: 16px;
+	// 	transition: font-size 0.2s ease;
+	// }
+
+	// span.animate {
+	// 	cursor: pointer;
+	// 	font-weight: bold;
+	// 	width: 100px;
+	// 	height: 50px;
+	// 	margin: 58.3px 0 58.3px 0;
+	// }
+
+	// span#toggle-backface-visibility {
+	// 	display: none;
+	// 	position: fixed;
+	// 	top: calc(100% - 150px);
+	// 	left: calc(50% - 75px);
+	// 	width: 150px;
+	// 	height: 50px;
+	// }
+
+	// #toggle-opacity {
+	// 	width: 150px;
+	// 	height: 50px;
+	// 	margin: auto ;
+	// }
+
 }
 
 /* Cube positioning */
-.cube-container {
-	width: 500px;
-	height: 500px;
-	position: fixed;
-	top: calc(50% - 250px);
-	left: calc(50% - 250px);
-	transition-duration:2s;
-	@include perspective(1000px);
+#content-wrapper {
+	height: calc(100% - #{$navheight});
+	#cube-container {
+		width: 500px;
+		height: 500px;
+		position: fixed;
+		top: 50%;
+		left: 50%;
+		transition-duration:2s;
+		@include perspective(1000px);
+		transform: translate(-50%, -50%);
 
-	#cube {
-		width: 100%;
-		height: 100%;
-		position: absolute;
-		-webkit-transform-style: preserve-3d;
-		   -moz-transform-style: preserve-3d;
-		     -o-transform-style: preserve-3d;
-			    transform-style: preserve-3d;
-		-webkit-transition: -webkit-transform 1.5s;
-	  	   -moz-transition: -moz-transform 1.5s;
-		     -o-transition: -o-transform 1.5s;
-			    transition: transform 1.5s;
-		figure {
-			margin: auto;
-			cursor:  pointer;
-			display: block;
-			position: absolute;
+		#cube {
 			width: 100%;
 			height: 100%;
-			box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.7);
-			font-weight: bold;
-			color: white;
-			text-align: center;
-			font-size: 50px;
-			opacity: 0.95;
-			top: 0;
-			left: 0;
-			transition:width 1s, height 1s, left 1s, top 1s;
-			/*transition-duration: 1s ;*/
-			&.zoomed {
-				opacity: 1;
-				cursor: default;
+			position: absolute;
+			-webkit-transform-style: preserve-3d;
+			   -moz-transform-style: preserve-3d;
+			     -o-transform-style: preserve-3d;
+				    transform-style: preserve-3d;
+			-webkit-transition: -webkit-transform 1.5s;
+		  	   -moz-transition: -moz-transform 1.5s;
+			     -o-transition: -o-transform 1.5s;
+				    transition: transform 1.5s;
+			figure {
+				margin: auto;
+				cursor:  pointer;
+				display: block;
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.7);
+				font-weight: bold;
+				color: white;
+				text-align: center;
+				font-size: 50px;
+				opacity: 0.95;
+				top: 0;
+				left: 0;
+				transition:width 1s, height 1s, left 1s, top 1s;
+				/*transition-duration: 1s ;*/
+				&.zoomed {
+					opacity: 1;
+					cursor: default;
+				}
+				p {
+					position: relative;
+					top: 50px;
+				}
 			}
-		}
 
-		.side img {
-			height: 65%;
-			position: relative;
-			top: 40px;
-			transition: opacity 1s;
-			
-			&.zoomed img { 
-				opacity: 0;
+			.side img {
+				height: 65%;
+				position: relative;
+				top: 40px;
+				transition: opacity 1s;
+				
+				&.zoomed img { 
+					opacity: 0;
+				}
 			}
+
+
+			.bottom img {
+				-webkit-transform:rotate(90deg);
+				   -moz-transform:rotate(90deg);
+				     -o-transform:rotate(90deg);
+				        transform:rotate(90deg);
+			}
+
+			.top img {
+				-webkit-transform:rotate(-90deg);
+				   -moz-transform:rotate(-90deg);
+				     -o-transform:rotate(-90deg);
+				        transform:rotate(-90deg);
+			}
+
 		}
-
-
-		.bottom img {
-			-webkit-transform:rotate(90deg);
-			   -moz-transform:rotate(90deg);
-			     -o-transform:rotate(90deg);
-			        transform:rotate(90deg);
-		}
-
-		.top img {
-			-webkit-transform:rotate(-90deg);
-			   -moz-transform:rotate(-90deg);
-			     -o-transform:rotate(-90deg);
-			        transform:rotate(-90deg);
-		}
-
-	}
+	}	
 }
+
 
 
 /* Cube size */
@@ -108,59 +165,37 @@ button:hover {
 }*/
 
 
-#show-buttons.zoomed #left-button-bar{
-	left: 100px;
-}
+// #show-buttons.zoomed #left-button-bar{
+// 	left: 100px;
+// }
 
-#show-buttons.zoomed #right-button-bar{
-	right: 100px;
-}
+// #show-buttons.zoomed #right-button-bar{
+// 	right: 100px;
+// }
 
 
 
 /* Buttons */
 
-button.animate {
-	cursor: pointer;
-	font-weight: bold;
-	width: 100px;
-	height: 50px;
-	margin: 58.3px 0 58.3px 0;
-}
 
-button#toggle-backface-visibility {
-	display: none;
-	position: fixed;
-	top: calc(100% - 150px);
-	left: calc(50% - 75px);
-	width: 150px;
-	height: 50px;
-}
+// #show-buttons #left-button-bar {
+// 	float: left;
+// 	position: fixed;
+// 	left: calc(50% - 450px);
+// 	top: calc(50% - 250px);
+// 	height: 500px;
+// 	width: 100px;
+// 	transition-duration: 2s;
+// }
 
-#toggle-opacity {
-	width: 150px;
-	height: 50px;
-	margin: auto ;
-}
-
-#show-buttons #left-button-bar {
-	float: left;
-	position: fixed;
-	left: calc(50% - 450px);
-	top: calc(50% - 250px);
-	height: 500px;
-	width: 100px;
-	transition-duration: 2s;
-}
-
-#show-buttons #right-button-bar {
-	float: right;
-	position: fixed;
-	right: calc(50% - 450px);
-	top: calc(50% - 250px);
-	height: 500px;
-	width: 100px;
-	transition-duration: 2s;
-}
+// #show-buttons #right-button-bar {
+// 	float: right;
+// 	position: fixed;
+// 	right: calc(50% - 450px);
+// 	top: calc(50% - 250px);
+// 	height: 500px;
+// 	width: 100px;
+// 	transition-duration: 2s;
+// }
 
 
